fixed FigureDisplay center and text alignment

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,6 @@
 .figure_display_bar {
   display: flex;
+  justify-content: space-around;
   align-items: center;
+  border: 1px solid green;
 }
