--- a/frontend/src/components/FigureDisplay/FigureDisplay.module.css
+++ b/frontend/src/components/FigureDisplay/FigureDisplay.module.css
@@ -1,6 +1,10 @@
 .container {
-  max-width: 85px;
-  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 150px;
+  max-width: 150px;
 }
 
 .title {
@@ -10,6 +14,15 @@
 }
 
 .figureNumber {
-  font-size: 0.875rem;
+  font-size: 1.5rem;
   font-weight: 700;
+  margin: 0;
+}
+
+.figureText {
+  font-size: 0.875rem;
+}
+
+.figureTextIntensity {
+  font-size: 0.525rem;
 }
