--- a/frontend/src/components/FigureDisplaySeparator/FigureDisplaySeparator.module.css
+++ b/frontend/src/components/FigureDisplaySeparator/FigureDisplaySeparator.module.css
@@ -4,5 +4,4 @@
   background: black;
   border: 1px solid black;
   border-radius: 25px;
-  margin: 0 10px;
 }
